examples/allocator-service/allocator-service.yaml
# Define a Service for the fleet-allocator
apiVersion: v1
kind: Service
metadata:
  name: fleet-allocator-backend
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
  labels:
    app: fleet-allocator
spec:
  type: NodePort
  selector:
    app: fleet-allocator
  ports:
  - port: 8000
    protocol: TCP
    name: https
    targetPort: fleet-allocator  # retrieve port from deployment config

---
# Deploy a pod to run the fleet-allocator code
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-allocator
  namespace: default
  labels:
    app: fleet-allocator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-allocator
  template:
    metadata:
      labels:
        app: fleet-allocator
    spec:
      serviceAccount: fleet-allocator
      volumes:
      - name: secret-volume
        secret:
          secretName: allocatorw3secret
      containers:
      - name: fleet-allocator
        image: index.docker.io/trota/allocator-service:simple-udp-0.5.0-03f4866-2
        imagePullPolicy: Always
        ports:
        - name: fleet-allocator
          containerPort: 8000
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - mountPath: /home/service/certs
          name: secret-volume
